# RustyBudget

./: Cargo.toml  README.md
src/: entries.rs  expenses.rs  main.rs
