[package]
name = "rusty_budget"
version = "0.1.0"
authors = ["Alden Davidson <adavidson+github@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.9.0"
console = "0.15.0"
permutation = "0.2.5"